--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="two_day">two_day</string>
     <string name="three_day">three_day</string>
 
+    <string name="daily">daily</string>
+    <string name="today">today</string>
+    <string name="temp">temp</string>
 
-    <string name="url">"https://api.openweathermap.org/data/2.5/onecall?lat=%s&amp;lon=%s&amp;exclude=minutely,hourly&amp;units=imperial"</string>
+
 </resources>
