fixed a bug I introduced with strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="three_day">three_day</string>
 
     <string name="daily">daily</string>
-    <string name="today">today</string>
+    <string name="today">current</string>
     <string name="temp">temp</string>
 
 
