--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">bk_weather</string>
     <string name="location">current_location</string>
     <string name="current_temp">current_temp</string>
+    <string name="this_day">this_day</string>
     <string name="tomorrow">tomorrow</string>
     <string name="two_day">two_day</string>
     <string name="three_day">three_day</string>
