--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">bk_weather</string>
+    <string name="app_name">Minimalist Weather</string>
     <string name="location">current_location</string>
     <string name="current_temp">current_temp</string>
     <string name="this_day">this_day</string>
@@ -11,4 +11,6 @@
     <string name="today">current</string>
     <string name="temp">temp</string>
 
+    <string name="gps_error">ERROR:\nNo GPS data\nTry again later!</string>
+    <string name="unexpected_error">Sorry\nSomething went wrong\nTry again later!</string>
 </resources>
