--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <!-- Strings for displaying on TextViews -->
     <string name="current_weather">Current Weather\n\t\t\t\t%s\n\t\t\t\t%d</string>
+    <string name="hr_by_hr_forecast">FIX ME!!!</string>
     <string name="today_forecast">Today\n\t\t\t\t%s\n\t\t\t\tHigh: %d\n\t\t\t\tLow: %d</string>
     <string name="future_forecast">%s\n\t\t\t\t%s\n\t\t\t\tHigh: %d\n\t\t\t\tLow: %d</string>
 
