--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,16 +8,14 @@
     <string name="future_cast">extended</string>
 
     <!-- Strings for displaying on TextViews -->
-    <string name="current_weather">Current Weather\n\t\t\t\t%s\n\t\t\t\t%d</string>
+    <string name="current_weather">Current Weather\n\t\t\t\t%s\n\t\t\t\tTemp: %d</string>
     <string name="hr_by_hr_forecast">%s\n\t\t\t\t%s\n\t\t\t\tTemp: %d\n\n</string>
-    <string name="today_forecast">Today\n\t\t\t\t%s\n\t\t\t\tHigh: %d\n\t\t\t\tLow: %d</string>
     <string name="future_forecast">%s\n\t\t\t\t%s\n\t\t\t\tHigh: %d\n\t\t\t\tLow: %d\n\n</string>
 
     <!-- Strings to identify items in JSONObject -->
     <string name="weather_now">current</string>
     <string name="hourly">hourly</string>
     <string name="daily_weather">daily</string>
-
 
     <string name="temperature">temp</string>
     <string name="weather">weather</string>
