building an alert button, starting to figure it out

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="lowTemp">min</string>
     <string name="dateTime">dt</string>
 
+    <!-- Alert button text -->
+    <string name="alert">ALERT!!!</string>
+
     <!-- Strings for some error messages -->
     <string name="gps_error">ERROR:\nNo GPS data\nTry again later!</string>
     <string name="unexpected_error">Sorry\nSomething went wrong\nTry again later!</string>
