--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Minimalist Weather</string>
     <string name="location">current_location</string>
 
+    <string name="intent">alert</string>
+
     <!-- Strings for tab titles -->
     <string name="current">current</string>
     <string name="hr_by_hr">hour by hour</string>
