--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="event">event</string>
     <string name="rise">sunrise</string>
     <string name="set">sunset</string>
+    <string name="wind_speed">wind_speed</string>
+    <string name="wind_deg">wind_deg</string>
 
     <string name="timeFormat">EEE MMM dd HH:mm:ss zzz yyyy</string>
     <string name="dayFormat">EEEE</string>
